--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "format:check": "prettier --config .prettierrc.yaml --list-different '{src,configs,tests}/**/*.{ts,tsx,js,jsx,html}'",
         "lint": "tslint '{src,configs,tests}/**/*.{ts,tsx,js,jsx}'",
         "test": "jest --coverage",
-        "test:watch": "jest --watch --coverage",
+        "test:watch": "jest --watch",
         "clean-dist": "rm -rfd dist"
     },
     "author": "",
