--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "license": "ISC",
     "dependencies": {
         "@types/react-router-dom": "^5.1.3",
+        "cross-fetch": "^3.0.4",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-hot-loader": "^4.12.18",
