--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "strict": true,
         "noUnusedParameters": true,
         "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+        "esModuleInterop": true
     },
     "include": ["./src/**/*"]
 }
