--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@types/react-router-dom": "^5.1.3",
         "cross-fetch": "^3.0.4",
+        "immer": "^5.0.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-hot-loader": "^4.12.18",
