remove unnecessary pages and add MTG card fetching

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "react-hot-loader": "^4.12.18",
         "react-redux": "^7.1.3",
         "react-router-dom": "^5.1.2",
-        "redux": "^4.0.4"
+        "redux": "^4.0.4",
+        "scryfall-sdk": "^1.5.1"
     },
     "devDependencies": {
         "@babel/plugin-proposal-class-properties": "^7.7.4",
